sock-store/ingress/frontend-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "ingress-front-end"
spec:
  rules:
  - host: front-end.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "ingress-front-end-tls"
spec:
  rules:
  - host: front-end.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
  tls:
  - secretName: front-end-certificate
    hosts:
    - front-end.example.com
